drupal/profiles/takepart/themes/takepart3/css/style.css
/* ... */
div.takepart_addthis_leftpanel div.addthis_toolbox a.addthis_button_email {
    float: left;
    height: 15px;
}

.region-sidebar-first div.takepart_addthis_leftpanel div.addthis_toolbox a.addthis_button_email {
    float: none;
}

.region-highlighted div.takepart_addthis_leftpanel div.addthis_toolbox a {
    margin-bottom: 4px;
}

.region-sidebar-first div.takepart_addthis_leftpanel div.addthis_toolbox a span {
    float:none;
}

div.takepart_addthis_leftpanel {
    margin: 0 0 8px 0;
}

#comments .comments-header {
    border-top: 1px dotted #555555;
    border-bottom: 1px solid #D9E7EE;
    padding-bottom: 8px;
    margin-bottom:12px;
    padding-top: 10px;
}

.node-type-openpublish-video #block-views-video-block-8,
.node-type-openpublish-video #block-views-video-block {
    padding-top:10px;
    border-top:1px dotted #000000;
    margin-top:10px;
}

div.tp-pet-thank-you-heading {
    font-size: 22px;
    line-height: 24px;
    margin-bottom: 6px;
    color: #000;
    font-weight: bold;
    background: none;
    clear: both;
}

#right-rail .field-name-field-blog-view .views-field-title a:hover {
    color: #1CA9E7;
}

#header-wrapper ul.menu {
    padding:0;
}

#header-wrapper ul.menu {
    padding-top: 0px;
}


/* H1 Headers when in subhead field */
.block-boxes-delta-page_title_h1 h1.title span {
    color: #000000;
    font-size: 36px;
    line-height: 100%;
    font-family: Helvetica,Arial,sans-serif;
    font-weight: bold;
}



.field-name-field-subhead .field-item {
    color: #666666;
    font-size: 18px;
    font-weight: normal;
    line-height: 22px;
}

.node-type-openpublish-photo-gallery .page {
    padding: 20px 20px 35px !important;
}

.multipage-campaign #footer {
    margin-left: 0px
}

.views-content-field-gallery-images img{

}

.views-content-field-gallery-images img:hover{

}

.block-boxes-delta-page_title_h1 h1.title span {
    color: #000000;
    font-size: 36px;
    line-height: 100%;
}

.main-content .block-boxes-current-video {
    margin-bottom: 20px;
}
.node-type-topic-front .block-boxes-title-secondary-features {
    background-color: #EFF3F5;
    padding:5px;
}

.node-type-topic-front .block-boxes-title-secondary-features .views-row {
    margin:5px;
}

.node-type-topic-front .block-boxes-title-secondary-features .views-field-field-promo-text,
.node-type-topic-front .block-boxes-title-secondary-features .views-field-php,
.node-type-topic-front .block-boxes-title-secondary-features .views-field-field-thumbnail {
    background-color: #FFF;
}

.node-type-topic-front .block-boxes-title-secondary-features .views-field-php  .field-content {
    padding:0 10px 2px 10px;
    display: block;
}
.node-type-topic-front .block-boxes-title-secondary-features .views-field-field-promo-text .field-content {
    padding:0 10px 10px 10px;
}
.block-boxes-view-name-video .views-field-field-promo-text {
    font-size: 14px;
}
.profile h3 {
    border: 0 none;
    margin:0;
}

.profile .views-field-field-promo-headline {
    margin-bottom: 0;
}
.profile h2.element-invisible {
    display: none;
}
#right-rail .block-newsletter-campaign h2 span {
    padding:0;
}

.block-boxes-title-features .views-field-field-promo-text .field-content {
    padding-bottom: 4px;
}

#tptv-more-video {
    text-transform: inherit;
}
.page-taxonomy-term #block-views-video-block-6 .content {
    border:0 none;
}
.page-taxonomy-term #block-views-video-block-6 h2 {
    display:none;
}

#page .page-taxonomy-term .block-boxes-delta-page_title_h1 h1.title {
    font-family: TradeGothicLTStdCnBold,sans-serif;
    font-size:26px;
    line-height: 26px;
    color: #99BBCC;
    font-weight: 300;
}
.page-taxonomy-term .block-boxes-delta-page_title_h1 h1.title span {
    color: #99BBCC;
    font-size:26px;
    font-family: TradeGothicLTStdCnBold,sans-serif;
    font-weight: 300;
}

#block-boxes-allfilms-campaigns-columns-block ul {
    list-style: none;
}

#boxes-box-allfilms_campaigns_columns_block ul li {
    clear: left;
    float: left;
    margin: 0 5px 7px 0;
}

#boxes-box-allfilms_campaigns_columns_block ul li a {
    color: black;
    font-size: 16px;
    font-weight: bold;
}

#boxes-box-allfilms_campaigns_columns_block ul div.col {
    float: left;
    width: 33%;
}

#boxes-box-allfilms_campaigns_columns_block ul li a:hover {
    color: #1CA9E7;
    text-decoration: underline;
}

.field-name-field-tp-campaign-cover-link .field-item {
    padding-bottom: 10px;
}

#boxes-box-allfilms_campaigns_columns_block ul li {
    width:270px
}

.node-type-section-front-wide .view-campaigns.view-display-id-block_1 .views-row .views-field-title a {
    font-size: 16px;
}

.node-type-section-front-wide .view-campaigns.view-dom-id-2 .view-content ul li,
.node-type-section-front-wide .view-campaigns.view-dom-id-3 .view-content ul li {
    margin: 0 7px 30px 0;
}

.node-type-section-front-wide #block-boxes-allfilms-campaigns-columns-block h2 {
    border-bottom: 1px solid #d9e7ee;
    margin-bottom: 10px;
}

.node-type-section-front-wide .region-content .field-type-text-with-summary p {
    font-size: 18px;
    color: #666666;
}

.node-type-takepart-campaign .block-boxes-bid-takepart_custom-page_title_h1 h1 {
    padding-bottom: 4px;
}

q:before, q:after {
    content: "";
}

.node-type-openpublish-video .node-openpublish-video .field-name-field-subhead {
    font-weight: normal;
}

.node-type-takepart-campaign #page {
    padding-top: 25px;
    padding-right: 0;
    padding-bottom: 25px;
    padding-left: 10px;
}

body.node-type-takepart-campaign .main-content #content {
    padding-left: 20px !important;
}

.node-type-section-front-wide .view-campaigns.view-dom-id-3 .view-content ul li {
    margin: 0 7px 0px 0;
}
.node-type-section-front-wide .view-campaigns.view-display-id-block_1 {
    font-size: 0; /* display: inline-block; space fix */
}
.node-type-section-front-wide .view-campaigns.view-display-id-block_1 .views-row {
    margin: 0 0 0 12px;
    font-size: 12px;
}
/* ... */

